# xcape-rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml  test.yml
src/: main.rs  processor.rs
src/processor/: args.rs  context.rs  error.rs  mod.rs  runner.rs  state.rs  xutil.rs
