[package]
name = "xcape-rs"
version = "0.1.0"
authors = ["hurou927 <god.be.with.ye.fs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = { version = "~0.7.0",  features = ["record", "xtest"] }
log = "0.4"
env_logger = "0.8"
clap = "2.33"
thiserror = "1.0"

