[package]
name = "xcape-rs"
version = "0.2.0"
authors = ["hurou927 <god.be.with.ye.fs@gmail.com>"]
edition = "2021"
email= "god.be.with.ye.fs@gmail.com"

description = "implementation of XCAPE in Rust"
repository = "https://github.com/hurou927/xcape-rs"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = { version = "~0.8.0",  features = ["record", "xtest"] }
log = "0.4"
env_logger = "0.8"
clap = "2.33"
thiserror = "1.0"

